// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`N8nDropdownMenu > disabled state > should render trigger with disabled attribute 1`] = `
<button
  aria-disabled="true"
  aria-expanded="false"
  aria-haspopup="menu"
  aria-live="polite"
  class="button button ghost xsmall iconOnly disabled is-disabled trigger"
  data-disabled=""
  data-icon-only="true"
  data-state="closed"
  disabled=""
  id="reka-dropdown-menu-trigger-v-1"
  type="button"
>
  <transition-stub
    appear="false"
    css="true"
    name="n8n-button-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <div
    class="button-inner"
  >
    
    <svg
      aria-hidden="true"
      class="n8n-icon"
      data-icon="ellipsis"
      fill="currentColor"
      focusable="false"
      height="10px"
      role="img"
      viewBox="0 0 16 16"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.2 6.5a1.3 1.3 0 0 1 1.3 1.3v.4a1.3 1.3 0 0 1-1.3 1.3h-.4a1.3 1.3 0 0 1-1.3-1.3v-.4a1.3 1.3 0 0 1 1.3-1.3zm5 0a1.3 1.3 0 0 1 1.3 1.3v.4a1.3 1.3 0 0 1-1.3 1.3h-.4a1.3 1.3 0 0 1-1.3-1.3v-.4a1.3 1.3 0 0 1 1.3-1.3zm5 0a1.3 1.3 0 0 1 1.3 1.3v.4a1.3 1.3 0 0 1-1.3 1.3h-.4a1.3 1.3 0 0 1-1.3-1.3v-.4a1.3 1.3 0 0 1 1.3-1.3z"
        fill-opacity=".87"
      />
    </svg>
    
    
    
  </div>
</button>
`;

exports[`N8nDropdownMenu > rendering > should render default trigger button 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-live="polite"
  class="button button ghost xsmall iconOnly trigger"
  data-icon-only="true"
  data-state="closed"
  id="reka-dropdown-menu-trigger-v-1"
  type="button"
>
  <transition-stub
    appear="false"
    css="true"
    name="n8n-button-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <div
    class="button-inner"
  >
    
    <svg
      aria-hidden="true"
      class="n8n-icon"
      data-icon="ellipsis"
      fill="currentColor"
      focusable="false"
      height="10px"
      role="img"
      viewBox="0 0 16 16"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.2 6.5a1.3 1.3 0 0 1 1.3 1.3v.4a1.3 1.3 0 0 1-1.3 1.3h-.4a1.3 1.3 0 0 1-1.3-1.3v-.4a1.3 1.3 0 0 1 1.3-1.3zm5 0a1.3 1.3 0 0 1 1.3 1.3v.4a1.3 1.3 0 0 1-1.3 1.3h-.4a1.3 1.3 0 0 1-1.3-1.3v-.4a1.3 1.3 0 0 1 1.3-1.3zm5 0a1.3 1.3 0 0 1 1.3 1.3v.4a1.3 1.3 0 0 1-1.3 1.3h-.4a1.3 1.3 0 0 1-1.3-1.3v-.4a1.3 1.3 0 0 1 1.3-1.3z"
        fill-opacity=".87"
      />
    </svg>
    
    
    
  </div>
</button>
`;

exports[`N8nDropdownMenu > rendering > should render with emoji activator 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-live="polite"
  class="button button ghost xsmall iconOnly trigger"
  data-icon-only="true"
  data-state="closed"
  id="reka-dropdown-menu-trigger-v-1"
  type="button"
>
  <transition-stub
    appear="false"
    css="true"
    name="n8n-button-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
  <div
    class="button-inner"
  >
    
    🎉
    
    
    
  </div>
</button>
`;
